--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
 	</head>
 
 	<body>
+		<form id="message-form">
+			<input type="text" name="message"/>
+			<input type="submit"/>
+		</form>
+
 		<script src="/js/jquery-3.0.0.min.js"></script>
 		<script src="/js/socket.io-1.3.7.js"></script>
 		<script src="/js/app.js"></script>
